# web2api

./: .dockerignore  .gitignore  Dockerfile  README.en.md  README.md  compose.yaml  config.yaml  main.py  pyproject.toml
.github/workflows/: docker-image.yml
core/: __init__.py  app.py  constants.py
core/account/: __init__.py  pool.py
core/api/: __init__.py  anthropic_routes.py  auth.py  chat_handler.py  config_routes.py  conv_parser.py  fingerprint.py  function_call.py  mock_claude.py  react_stream_parser.py  routes.py  schemas.py  tagged_stream_parser.py
core/config/: __init__.py  repository.py  schema.py  settings.py
core/plugin/: __init__.py  base.py  claude.py  errors.py  helpers.py
core/protocol/: openai.py  service.py
core/runtime/: __init__.py  browser_manager.py  conversation_index.py  keys.py  local_proxy_forwarder.py  session_cache.py
core/static/: config.html  index.html  login.html
docker/: config.container.yaml  entrypoint.sh
docs/: config.md  deployment.md
docs/request_samples/: all_api_curl_tests.sh
scripts/: stress_test.py
tests/: test_tagged_output.py  test_tagged_protocol_adapters.py
